Fix wrapping of room layout grid.

--- a/leader-app/static/custom.css
+++ b/leader-app/static/custom.css
@@ -56,6 +56,7 @@ nav.navbar-beast {
 /* Room Pages */
 .room-grid {
     width: 100%;
+    max-width: 1092px;
 }
 
 .room-grid .room {
